  * change default behaviour for the cpuset_manager.pl
  * enable a user to use the same key for several jobs (at his own risk!)
  * add node hostnames in oarstat -f
  * add --accounting and -u options in oarstat
  * bug fix on index fields in the database (syncro): bug 2020
  * bug fix about server pro/epilogue: bug 2022
  * change the default output of oarstat. Now it is usable: bug 1875

 -- Capit Nicolas <nicolas.capit@imag.fr>  Tue, 20 Feb 2007 12:55:55 -0600

oar (2.0.1-2) unstable; urgency=low

  * bug fix in packaging
  * packaging postgresql support

 -- Capit Nicolas <capitn@imag.fr>  Tue, 16 Jan 2007 17:36:30 +0100

oar (2.0.1-1) unstable; urgency=low

  * Fix oarsh tty problem (tty owner was oar)
  * append output in stdout and stderr files instead of overwriting existing files
  * fix a drawgantt bug
  * packaging fix
  * bug fix in resubmit function (stdout and stderr files)
  * bug fix (exec with another shell than sh)

 -- Capit Nicolas <capitn@imag.fr>  Mon, 25 Dec 2006 23:37:21 +0100

oar (2.0.0-2) unstable; urgency=low

  * add full path to ssh in oarsh
  * replace sudowrapper link by real files

 -- Capit Nicolas <capitn@imag.fr>  Fri, 15 Dec 2006 22:42:04 +0100

oar (2.0.0-1) unstable; urgency=low

  * bug fix
  * versioning

 -- Capit Nicolas <capitn@imag.fr>  Fri, 15 Dec 2006 17:33:06 +0100

oar (2.0.0-rc1) unstable; urgency=low

  * add a check in oar_scheduler.pm to avoid problems
  * rc1 release

 -- Capit Nicolas <capitn@imag.fr>  Fri,  8 Dec 2006 16:43:44 +0100

oar (2.0.0-beta12) unstable; urgency=low

  * fix security bug in oarsh

 -- Capit Nicolas <capitn@imag.fr>  Sun,  3 Dec 2006 20:08:29 +0100

oar (2.0.0-beta11) unstable; urgency=low

  * add cpuset script comment for virtualization feature
  * debug draw-gantt
  * add OAR_JOB_WALLTIME and OAR_JOB_WALLTIME_SECONDS environment variables
  * debug gantt sql query in oarstat
  * add a scheduler with a simple fairsharing algorithm
